--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,19 @@
 .header {
   display: grid;
-  height: 293px;
+  
   grid-template-columns: 2fr 1fr 2fr;
   align-items: center;
   padding: 92px 50px;
 }
-.header-footer-font {
+.edges-font {
   font-size: 18px;
   font-weight: normal;
   font-style: normal;
   line-height: 1.35;
 }
-
+.no_underline{
+  text-decoration:none;
+}
 .menu {
   display: flex;
   flex-direction: row;
@@ -36,23 +38,43 @@
 
 .address {
   width: 240px;
-  height: 98px;
+  
   justify-self: end;
   align-self: center;
   text-underline-position: under;
 }
+.content-section{
+  width: 100%;
+  margin: 0 auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.60;
+  background-color: #000000;
+}
 
 .cover {
-  display: flex;
-  flex-direction: column;
-  /*flex-wrap: wrap;*/
-  height: 757px;
+  position: relative;
+  padding: 165px 50px 50px 50px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
 }
 
 .cover-title {
-  padding-top: 165px;
-  padding-bottom: 135px;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  text-transform: uppercase;
 }
 
 .cover-title-font {
@@ -63,29 +85,21 @@
   text-transform: uppercase;
 }
 .cover-title-start {
+  display: block;
   text-align: left;
-  line-height: 1.15;
-  padding-left: 50px;
+  line-height: 1.15; 
 }
 .cover-title-mid {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 336px;
-  padding-right: 395px;
+  display: block;  
+  text-align: center;
 }
 .cover-title-end {
-  text-align: right;
-  padding-right: 50px;
+  display: block;
+  text-align: right;  
 }
-
-.cover-image {
-  position: absolute;
-  width: 1100px;
-  height: 757px;
-  filter: brightness(40%);
-  z-index: -1;
+.remove-spacing{
+  letter-spacing: normal;
 }
-
 .letter-space-mid {
   letter-spacing: 0.3em;
 }
@@ -95,13 +109,13 @@
 }
 
 .cover-bottom {
+  position: relative;
+  z-index: 1;
   display: flex;
-  width: 100%;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  padding-right: 50px;
-  padding-left: 78px;
-  padding-bottom: 10px;
+  gap: 78px;
+  padding: 136px 0 0;
 }
 
 .cover-bottom-font {
@@ -126,9 +140,10 @@
 .cover-button {
   background: transparent;
   color: white;
+  font-family: Raleway, sans-serif;
   border: 1px;
   border-color: white;
-  border-style: groove;
+  border-style: solid;
   height: 51px;
   width: 256px;
 }
@@ -142,31 +157,58 @@
   padding-bottom: 27px;
 }
 .card {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
   width: 334px;
-  height: 563px;
+  min-height: 563px;
   /*  padding-top: 27px; */
 }
-h1 {
+.card-film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-size:cover ;
+}
+
+.card-book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card-picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+h2 {
   font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
 }
 
-h2 {
+h3 {
   font-size: 22px;
   font-weight: bold;
   text-decoration: underline;
   color: white;
   text-transform: uppercase;
 }
+.card-link {
+  display: block;
+  height: 100%;
+}
 .card-title {
+  position: relative;
+  z-index: 1;
   padding-top: 51px;
   padding-left: 40px;
+  padding-right: 50px;
 }
 .card-text {
+  position: relative;
+  z-index: 1;
   font-size: 20px;
   line-height: 1.2em;
   color: white;
@@ -184,9 +226,11 @@ h2 {
 
 .card-list {
   display: flex;
+  flex-wrap:wrap;
   flex-direction: row;
+  flex-grow: 1;
   align-items: center;
-  justify-content: space-between;
+  justify-content: start;
   gap: 25px;
   padding-bottom: 30px;
 }
@@ -237,10 +281,10 @@ h2 {
 .about-ls-low {
   letter-spacing: 0.02em;
 }
-.about-ls-low3 {
+.about-ls-lowt {
   letter-spacing: 0.03em;
 }
-.about-ls-low4 {
+.about-ls-lowf {
   letter-spacing: 0.04em;
 }
 .footer {
